--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "uniform-inventory-ts",
+  "name": "uniform-inventory",
   "version": "1.0.0",
   "description": "Uniform Inventory Management System",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
+    "build": "tsc && mkdir -p dist/uniform-inventory && cp -r uniform-inventory/* dist/uniform-inventory/",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "watch": "tsc -w"
+    "dev": "nodemon src/index.ts"
   },
   "keywords": ["inventory", "uniform", "management"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.24",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
     "@types/sqlite3": "^3.1.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "sqlite3": "^5.1.7",
-    "typescript": "^5.3.3"
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 } 
