--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
-  "keywords": ["inventory", "uniform", "management"],
+  "keywords": [
+    "inventory",
+    "uniform",
+    "management"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
@@ -26,4 +31,4 @@
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
-} 
+}
